lab4/k8s-rest-app_4lab/k8s/05-gateway-api/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: backend
  namespace: default
spec:
  parentRefs:
  - name: eg
  hostnames:
  - "myapp.local"
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: myapp-service
      port: 80
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
